[project]			# 
name = "subcellportable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "boto3>=1.34",
    "loguru>=0.7.3",
    "numpy>=1",
    "pynng>=0.8.1",
    "pyyaml>=6.0",
    "requests>=2.32",
    "torch>=2.4.1",
    "tqdm>=4.66",
    "trio>=0.33.0",
    "torchvision",
    "transformers>=4.45.1",
]

# Needed since it is a flat directory
[tool.setuptools]
py-modules = []
